@@ -2679,6 +2679,10 @@ The e-mail address you entered in [[Special:Preferences|your user preferences]] 
 'noemailtext'          => 'This user has not specified a valid e-mail address.',
 'nowikiemailtitle'     => 'No e-mail allowed',
 'nowikiemailtext'      => 'This user has chosen not to receive e-mail from other users.',
+'emailnotarget'        => 'Nonexistent or invalid user name to receive e-mail.',
+'emailtarget'          => 'Enter user to receive e-mail',
+'emailusername'        => 'User name:',
+'emailusernamesubmit'  => 'Submit',
 'email-legend'         => 'Send an e-mail to another {{SITENAME}} user',
 'emailfrom'            => 'From:',
 'emailto'              => 'To:',
